crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_css_v_bind_uses_scoped_vars.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: "sfc_compile_snapshot(&descriptor.css_vars, &result)"
---
css vars:
- height + 'px'
- color

css:
.box[data-v-test]{
  height: var(--v2023a4fe);
  color: var(--test-color);
}


code:
import { useCssVars as _useCssVars, unref as _unref } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

const _hoisted_1 = { class: "box" }

const height = 12
const color = 'tomato'

export default {
  __name: 'Box',
  setup(__props) {

_useCssVars(_ctx => ({
  "v2023a4fe": (height + 'px'),
  "test-color": (color)
}))


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, "Box"))
}
}

}
